Update deprecated API